--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ readme = "README.md"
 dependencies = [
     "pydantic>=2.0.0",
     "qdrant-client>=1.15.1",
+    "openai>=1.0.0",
 ]
 
 [project.optional-dependencies]
