--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "pydantic>=2.0.0",
     "qdrant-client>=1.15.1",
     "openai>=1.0.0",
+    "pytest>=8.4.2",
 ]
 
 [project.optional-dependencies]
