--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "openai>=1.0.0",
     "pytest>=8.4.2",
     "pydantic-ai>=0.0.14",
+    "pytest-asyncio>=1.2.0",
 ]
 
 [project.optional-dependencies]
