--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "pytest>=8.4.2",
     "pydantic-ai>=0.0.14",
     "pytest-asyncio>=1.2.0",
+    "chromadb>=1.2.2",
 ]
 
 [project.optional-dependencies]
