Implemented Hybrid Search for Qdrant

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "pydantic-ai>=0.0.14",
     "pytest-asyncio>=1.2.0",
     "chromadb>=1.2.2",
+    "fastembed>=0.7.3",
 ]
 
 [project.optional-dependencies]
