--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "fastembed>=0.7.3",
     "pymongo>=4.15.3",
     "fsspec>=2025.9.0",
+    "gradio>=5.49.1",
 ]
 
 [project.optional-dependencies]
