--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,8 @@ dependencies = [
     "gradio>=5.49.1",
     "motor>=3.7.1",
     "mongomock-motor>=0.0.36",
+    "nest-asyncio>=1.6.0",
+    "uvicorn>=0.38.0",
 ]
 
 [project.optional-dependencies]
