--- a/pytest.ini
+++ b/pytest.ini
@@ -28,6 +28,7 @@ markers =
 
 # Asyncio mode
 asyncio_mode = auto
+asyncio_default_fixture_loop_scope = function
 
 # Coverage options
 [coverage:run]
