Added file parsers - PyMuPDF4LLM - Docling

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,10 @@ dependencies = [
     "mongomock-motor>=0.0.36",
     "nest-asyncio>=1.6.0",
     "uvicorn>=0.38.0",
+    "pymupdf4llm>=0.0.27",
+    "llama-index>=0.14.6",
+    "docling>=2.59.0",
+    "torch>=2.9.0",
 ]
 
 [project.optional-dependencies]
