--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,11 +22,14 @@ dependencies = [
     "motor>=3.7.1",
     "mongomock-motor>=0.0.36",
     "nest-asyncio>=1.6.0",
-    "uvicorn>=0.38.0",
+    "uvicorn==0.35.0",
     "pymupdf4llm>=0.0.27",
     "llama-index>=0.14.6",
     "docling>=2.59.0",
     "torch>=2.9.0",
+    "fastapi>=0.120.2",
+    "jinja2>=3.1.6",
+    "universal-pathlib>=0.3.4",
 ]
 
 [project.optional-dependencies]
