Rudamentory support for LlamaIndex. Tested with: - VectorIndexRetriever - RetrieverQueryEngine
...should work with workflows, agents and whatnot.....

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ dependencies = [
     "fastapi>=0.120.2",
     "jinja2>=3.1.6",
     "universal-pathlib>=0.3.4",
+    "llama-index-llms-openai>=0.6.6",
 ]
 
 [project.optional-dependencies]
