--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,80 +1,54 @@
 version: '3.8'
 
 services:
-  # Qdrant Vector Database
+  # Qdrant vector database
   qdrant:
-    image: qdrant/qdrant:latest
-    container_name: fetchcraft-qdrant
+    image: qdrant/qdrant
+    hostname: qdrant
     ports:
       - "6333:6333"
       - "6334:6334"
     volumes:
-      - qdrant_storage:/qdrant/storage
+      - /mnt/storage/AI-Infrastructure/qdrant-data:/qdrant/storage
     environment:
       - QDRANT__SERVICE__GRPC_PORT=6334
-    restart: unless-stopped
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:6333/health"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
+    networks: [ 'demo-net' ]
 
-  # OpenAPI HTML Server (RAG Tool API)
-  openapi_html_server:
+  mongodb:
+    image: mongo
+    container_name: mongodb
+    hostname: mongodb
+    command: mongod --quiet --logpath /var/log/mongodb/server1.log --logappend
+    networks: [ 'demo-net' ]
+    ports:
+      - "27017:27017"
+    volumes:
+      - /mnt/storage/AI-Infrastructure/mongodb-data:/data/db
+    restart: always
+
+  # Fetchcraft OpenAPI Server
+  fetchcraft-openapi-server:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: fetchcraft-openapi-server
     ports:
       - "8001:8001"
     volumes:
-      # Mount documents directory for indexing
       - ./Documents:/app/Documents
-      # Optional: Mount parsing code for development (hot reload)
-      # - ./src:/app/src
+      - ./demo_queue.db:/app/demo_queue.db
+    env_file:
+      - fetchcraft-demos/fetchcraft-openapi-server/.env
     environment:
-      # Qdrant Configuration
-      - QDRANT_HOST=qdrant
-      - QDRANT_PORT=6333
-      - COLLECTION_NAME=fetchcraft_chatbot
-      
-      # Documents Configuration
-      - DOCUMENTS_PATH=/app/Documents
-      
-      # Embeddings Configuration
-      - EMBEDDING_MODEL=bge-m3
-      - OPENAI_API_KEY=${OPENAI_API_KEY:-sk-321}
-      - OPENAI_BASE_URL=${OPENAI_BASE_URL:-http://localhost:11434/v1}
-      
-      # LLM Configuration
-      - LLM_MODEL=${LLM_MODEL:-gpt-4-turbo}
-      
-      # Chunking Configuration
-      - CHUNK_SIZE=8192
-      - CHUNK_OVERLAP=200
-      
-      # Hybrid Search Configuration
-      - ENABLE_HYBRID=true
-      - FUSION_METHOD=rrf
-      
-      # Server Configuration
       - HOST=0.0.0.0
       - PORT=8001
+      - QDRANT_HOST=qdrant
+      - QDRANT_PORT=6333
     depends_on:
-      qdrant:
-        condition: service_healthy
+      - qdrant
     restart: unless-stopped
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8001/health"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 60s
-
-volumes:
-  qdrant_storage:
-    driver: local
+    networks: [ 'demo-net' ]
 
 networks:
-  default:
-    name: fetchcraft-network
+  loadbalancing:
+  demo-net:
+    driver: bridge
