--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "fetchcraft-openapi-server",
     "fetchcraft-mcp-server",
     "fetchcraft-parsing-docling",
+    "fetchcraft-ingestion-admin",
 ]
 
 [tool.uv]
@@ -18,6 +19,7 @@ dependencies = [
 members = [
     "packages/fetchcraft-core",
     "packages/fetchcraft-parsing-docling",
+    "packages/fetchcraft-ingestion-admin",
     "fetchcraft-demos/fetchcraft-openapi-server",
     "fetchcraft-demos/fetchcraft-openai-server",
     "fetchcraft-demos/fetchcraft-mcp-server",
@@ -29,4 +31,5 @@ fetchcraft-parsing-docling = { workspace = true }
 fetchcraft-openapi-server = { workspace = true }
 fetchcraft-openai-server = { workspace = true }
 fetchcraft-mcp-server = { workspace = true }
+fetchcraft-ingestion-admin = { workspace = true }
 
