--- a/fetchcraft-demos/fetchcraft-openai-server/pyproject.toml
+++ b/fetchcraft-demos/fetchcraft-openai-server/pyproject.toml
@@ -2,7 +2,7 @@
 name = "fetchcraft-openai-server"
 version = "0.2.0"
 description = "OpenAI-based server for Fetchcraft"
-requires-python = ">=3.12"
+requires-python = ">=3.12,<3.14"
 dependencies = [
   "fetchcraft-core",
 ]
