Some refactorings Added /health for monitoring

--- a/fetchcraft-demos/fetchcraft-mcp-server/pyproject.toml
+++ b/fetchcraft-demos/fetchcraft-mcp-server/pyproject.toml
@@ -4,8 +4,9 @@ version = "0.2.0"
 description = "MCP server for Fetchcraft"
 requires-python = ">=3.12,<3.14"
 dependencies = [
+  "fastmcp>=2.13.0.2",
   "fetchcraft-core",
-  "mcp",
+  "pydantic-settings>=2.11.0",
 ]
 
 [project.scripts]
