--- a/packages/fetchcraft-admin/.env.example
+++ b/packages/fetchcraft-admin/.env.example
@@ -35,3 +35,7 @@ CHUNK_OVERLAP=200
 # Hybrid search
 ENABLE_HYBRID=true
 FUSION_METHOD=rrf
+
+# Worker configuration
+# Number of concurrent workers for processing documents
+NUM_WORKERS=4
