--- a/example.env
+++ b/example.env
@@ -5,6 +5,16 @@ DOCUMENTS_PATH=./docs
 HOST=0.0.0.0
 PORT=8001
 OUTPUT_HTML=True
+DOCLING_SERVER=http://docling-server:8001
+MONGO_URI=mongodb://mongodb:27017/
+POSTGRES_URL=postgresql://postgres:password@pgvector:5432/fetchcraft
+# Async parsing configuration
+USE_ASYNC_PARSING=true
+ADMIN_CALLBACK_URL=http://localhost:8080/api/callbacks/parsing
+# Worker configuration
+# Number of concurrent workers for processing documents
+NUM_WORKERS=4
+
 
 # ------------------------------------------
 #   Embeddings
