--- a/Dockerfile-gpu
+++ b/Dockerfile-gpu
@@ -1,7 +1,7 @@
-# Use Python 3.12 slim image
-FROM ghcr.io/docling-project/docling-serve-cu126
+FROM pytorch/pytorch:2.6.0-cuda12.4-cudnn9-devel
+#FROM pytorch/pytorch:2.6.0-cuda12.4-cudnn9-runtime
 
-RUN #apt-get update && apt-get install ffmpeg libsm6 libxext6  -y
+#RUN apt-get update && apt install python3 install ffmpeg libsm6 libxext6 nvtop -y
 
 # Set working directory
 WORKDIR /app
@@ -15,8 +15,12 @@ COPY . .
 # Sync dependencies using uv
 RUN uv sync --frozen
 
+RUN pip install optimum[onnxruntime-gpu]
+
+RUN uv pip install optimum[onnxruntime-gpu]
+
 # Create Documents directory
-RUN mkdir -p /app/Documents
+RUN mkdir -p /api/Documents
 
 # Expose the default port
 #EXPOSE 8001
@@ -27,4 +31,4 @@ RUN mkdir -p /app/Documents
 ENV PYTHONUNBUFFERED=1
 
 # Run the server
-CMD ["uv", "run", "fetchcraft-openapi-server"]
+CMD ["uv", "run", "fetchcraft-docling-server"]
