Admin server rewrite

--- a/packages/fetchcraft-admin/.env.example
+++ b/packages/fetchcraft-admin/.env.example
@@ -1,7 +1,13 @@
 # PostgreSQL Database configuration
 POSTGRES_URL=postgresql://postgres:yourpassword@localhost:5432/ingestion
+
+# Connection pool sizing
+# The pool size is auto-calculated based on NUM_WORKERS to prevent "too many clients" errors
+# Formula: max_pool_size >= NUM_WORKERS * 3 + 10
+# If you have many workers, ensure PostgreSQL max_connections is sufficient
+# Default PostgreSQL max_connections is 100
 POOL_MIN_SIZE=5
-POOL_MAX_SIZE=10
+POOL_MAX_SIZE=20
 
 # Server configuration
 HOST=0.0.0.0
@@ -22,6 +28,10 @@ DOCUMENT_DB=fetchcraft
 # Docling server
 DOCLING_SERVER=http://localhost:8001
 
+# Callback base URL for async parsing
+# This should be the externally accessible URL of this admin server
+CALLBACK_BASE_URL=http://localhost:8080
+
 # Embeddings configuration
 EMBEDDING_MODEL=bge-m3
 EMBEDDING_API_KEY=sk-321
@@ -38,4 +48,7 @@ FUSION_METHOD=rrf
 
 # Worker configuration
 # Number of concurrent workers for processing documents
+# NOTE: Connection pool will be auto-sized based on this value
+# Formula: max_pool_size >= NUM_WORKERS * 3 + 10
+# Ensure PostgreSQL max_connections is sufficient for your worker count
 NUM_WORKERS=4
