--- a/packages/fetchcraft-parsing-docling/pyproject.toml
+++ b/packages/fetchcraft-parsing-docling/pyproject.toml
@@ -11,6 +11,9 @@ dependencies = [
   "uvicorn>=0.32.0",
   "python-multipart>=0.0.9",
   "python-dotenv>=1.0.0",
+  "pydantic-settings>=2.0.0",
+  "httpx>=0.27.0",
+  "optimum[onnxruntime-gpu]>=2.0.0",
 ]
 
 [project.scripts]
