--- a/fetchcraft-demos/fetchcraft-demo-mcp-server/pyproject.toml
+++ b/fetchcraft-demos/fetchcraft-demo-mcp-server/pyproject.toml
@@ -1,16 +1,15 @@
 [project]
-name = "fetchcraft-mcp-server"
+name = "fetchcraft-demo-mcp-server"
 version = "0.4.1"
-description = "MCP server for Fetchcraft"
+description = "Demo MCP server for Fetchcraft"
 requires-python = ">=3.12,<3.14"
 dependencies = [
-  "fastmcp>=2.13.0.2",
   "fetchcraft-core",
   "pydantic-settings>=2.11.0",
 ]
 
 [project.scripts]
-fetchcraft-mcp-server = "fetchcraft.mcp.server:main"
+fetchcraft-mcp-server = "fetchcraft.demo.mcp.server:main"
 
 [build-system]
 requires = ["hatchling"]
