--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,11 +8,12 @@ dependencies = [
     "fetchcraft-core",
     "fetchcraft-openai-server",
     "fetchcraft-openapi-server",
-    "fetchcraft-mcp-server",
+    "fetchcraft-demo-mcp-server",
     "fetchcraft-parsing-docling",
     "fetchcraft-gradio-chatbot",
     "fetchcraft-hybrid-search",
     "fetchcraft-admin",
+    "fetchcraft-mcp-server",
 ]
 
 [tool.uv]
@@ -25,8 +26,9 @@ members = [
     "fetchcraft-demos/fetchcraft-gradio-chatbot",
     "fetchcraft-demos/fetchcraft-hybrid-search",
     "fetchcraft-demos/fetchcraft-openai-server",
-    "fetchcraft-demos/fetchcraft-mcp-server",
+    "fetchcraft-demos/fetchcraft-demo-mcp-server",
     "packages/fetchcraft-admin",
+    "packages/fetchcraft-mcp-server",
 ]
 
 [tool.uv.sources]
@@ -34,8 +36,9 @@ fetchcraft-core = { workspace = true }
 fetchcraft-parsing-docling = { workspace = true }
 fetchcraft-openapi-server = { workspace = true }
 fetchcraft-openai-server = { workspace = true }
-fetchcraft-mcp-server = { workspace = true }
 fetchcraft-gradio-chatbot = { workspace = true }
 fetchcraft-hybrid-search = { workspace = true }
 fetchcraft-admin = { workspace = true }
+fetchcraft-demo-mcp-server = { workspace = true }
+fetchcraft-mcp-server = { workspace = true }
 
