--- a/.env.example
+++ b/.env.example
@@ -1,62 +1,62 @@
-# ============================================================================
-# OpenAPI HTML Server Environment Configuration
-# ============================================================================
-# Copy this file to .env and update with your values
+# ------------------------------------------#LLM_MODEL=gpt-4-turbo
 
-# ============================================================================
-# OpenAI / LLM API Configuration
-# ============================================================================
-# For OpenAI
-OPENAI_API_KEY=sk-123
-OPENAI_BASE_URL=http://wingman.akhbar.home/v1
+#   General
+# ------------------------------------------
+DOCUMENTS_PATH=./docs
 
-# For Ollama (local)
-# OPENAI_API_KEY=sk-321
-# OPENAI_BASE_URL=http://localhost:11434/v1
+# Callback base URL for async parsing
+# This should be the externally accessible URL of this admin server
+CALLBACK_BASE_URL=http://localhost:8005
 
-# For other OpenAI-compatible APIs
-# OPENAI_API_KEY=your-key
-# OPENAI_BASE_URL=http://your-api-endpoint/v1
+DOCLING_SERVER=http://docling-server:8001
+MONGO_URI=mongodb://mongodb:27017/
+POSTGRES_URL=postgresql://postgres:password@pgvector:5432/ingestion
+# Async parsing configuration
+USE_ASYNC_PARSING=true
 
-# ============================================================================
-# LLM Model Configuration
-# ============================================================================
-LLM_MODEL=gpt-4-turbo
-# Alternatives: gpt-3.5-turbo, gpt-4, llama2, mistral, etc.
+# Worker configuration
+# Number of concurrent workers for processing documents
+POOL_MIN_SIZE=10
+POOL_MAX_SIZE=20
+NUM_WORKERS=12
 
-# ============================================================================
-# Embeddings Configuration
-# ============================================================================
-EMBEDDING_MODEL=bge-m3
-# Alternatives: text-embedding-ada-002, bge-large, etc.
-
-# ============================================================================
-# Qdrant Vector Database Configuration
-# ============================================================================
-QDRANT_HOST=wingman.akhbar.home
-QDRANT_PORT=6333
 COLLECTION_NAME=fetchcraft_chatbot
 
-# ============================================================================
-# Documents Configuration
-# ============================================================================
-DOCUMENTS_PATH=/app/Documents
+# ------------------------------------------
+#   Embeddings
+# ------------------------------------------
+EMBEDDING_MODEL=bge-m3
+EMBEDDING_API_KEY=sk-123
+EMBEDDING_BASE_URL=http://localhost:8000/v1
 
-# ============================================================================
-# Chunking Configuration
-# ============================================================================
-CHUNK_SIZE=8192
-CHUNK_OVERLAP=200
+# ------------------------------------------
+#   LLM - OpenAI
+# ------------------------------------------
+OPENAI_API_KEY=sk-123
+OPENAI_BASE_URL=http://localhost:8000/v1
+LLM_MODEL=gpt-5
 
-# ============================================================================
-# Hybrid Search Configuration
-# ============================================================================
+# ------------------------------------------
+# PostgreSQL
+# ------------------------------------------
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=password
+POSTGRES_DB=fetchcraft
+
+# ------------------------------------------
+#   Qdrant Vector Store
+# ------------------------------------------
+QDRANT_HOST=localhost
+QDRANT_PORT=6333
 ENABLE_HYBRID=true
 FUSION_METHOD=rrf
-# Alternatives: dbsf (distribution-based score fusion)
 
-# ============================================================================
-# Server Configuration
-# ============================================================================
-HOST=0.0.0.0
-PORT=8001
+# ------------------------------------------
+#   Vector Index
+# ------------------------------------------
+INDEX_ID=docs-index
+CHUNK_SIZE=16384
+CHILD_CHUNKS=4096,1024
+CHUNK_OVERLAP=200
+
+HF_HOME=$HOME/.cache/huggingface
