--- a/.env.example
+++ b/.env.example
@@ -1,26 +1,64 @@
-# ------------------------------------------#LLM_MODEL=gpt-4-turbo
-
+# ------------------------------------------
 #   General
 # ------------------------------------------
-DOCUMENTS_PATH=./docs
+INGESTION_ROOT=./docs
+DOCUMENTS_PATH=/app/Documents
+PORT=8001
+HOST=0.0.0.0
 
-# Callback base URL for async parsing
-# This should be the externally accessible URL of this admin server
-CALLBACK_BASE_URL=http://localhost:8005
+# ------------------------------------------
+#   GPU
+# ------------------------------------------
+CUDA_DEVICE_ORDER=PCI_BUS_ID
+CUDA_VISIBLE_DEVICES=1
+NVIDIA_VISIBLE_DEVICES=1
 
-DOCLING_SERVER=http://docling-server:8001
-MONGO_URI=mongodb://mongodb:27017/
+# ------------------------------------------
+#   Vector Index
+# ------------------------------------------
+INDEX_ID=docs-index
+CHUNK_SIZE=4096
+CHILD_CHUNKS=1024,512
+CHUNK_OVERLAP=200
+
+MONGO_URI=mongodb://mongodb:27017/fetchcraft
 POSTGRES_URL=postgresql://postgres:password@pgvector:5432/ingestion
-# Async parsing configuration
-USE_ASYNC_PARSING=true
+COLLECTION_NAME=fetchcraft_chatbot
+#POSTGRES_URL=postgresql://postgres:password@pgvector:5432/sexfiles
+#COLLECTION_NAME=fetchcraft_sexfiles
 
+
+# ------------------------------------------
 # Worker configuration
+# ------------------------------------------
+# Fetchcraft Admin Ingestion
 # Number of concurrent workers for processing documents
+# ------------------------------------------
 POOL_MIN_SIZE=10
 POOL_MAX_SIZE=20
 NUM_WORKERS=12
 
-COLLECTION_NAME=fetchcraft_chatbot
+# ------------------------------------------
+#   Callback Base URL
+# ------------------------------------------
+# Callback base URL for async parsing
+# This should be the externally accessible URL of this admin server
+# ------------------------------------------
+DOCLING_SERVER=http://docling-server:8001
+CALLBACK_BASE_URL=http://fetchcraft-admin:8001
+
+
+# ------------------------------------------
+#   MCP Server
+# ------------------------------------------
+FRONTEND_BASE_URL=http://fetchcraft-admin:8001
+
+# ------------------------------------------
+#   LLM - OpenAI
+# ------------------------------------------
+OPENAI_API_KEY=sk-123
+OPENAI_BASE_URL=http://localhost:8000/v1
+LLM_MODEL=gpt-4-turbo
 
 # ------------------------------------------
 #   Embeddings
@@ -28,13 +66,6 @@ COLLECTION_NAME=fetchcraft_chatbot
 EMBEDDING_MODEL=bge-m3
 EMBEDDING_API_KEY=sk-123
 EMBEDDING_BASE_URL=http://localhost:8000/v1
-
-# ------------------------------------------
-#   LLM - OpenAI
-# ------------------------------------------
-OPENAI_API_KEY=sk-123
-OPENAI_BASE_URL=http://localhost:8000/v1
-LLM_MODEL=gpt-5
 
 # ------------------------------------------
 # PostgreSQL
@@ -46,17 +77,20 @@ POSTGRES_DB=fetchcraft
 # ------------------------------------------
 #   Qdrant Vector Store
 # ------------------------------------------
-QDRANT_HOST=localhost
+QDRANT_HOST=fetchcraft-qdrant
 QDRANT_PORT=6333
 ENABLE_HYBRID=true
 FUSION_METHOD=rrf
 
 # ------------------------------------------
-#   Vector Index
+#   Huggingface
 # ------------------------------------------
-INDEX_ID=docs-index
-CHUNK_SIZE=16384
-CHILD_CHUNKS=4096,1024
-CHUNK_OVERLAP=200
-
 HF_HOME=$HOME/.cache/huggingface
+
+# ------------------------------------------
+#   Librechat
+# ------------------------------------------
+UID=
+GID=
+MEILI_MASTER_KEY=masterkey
+
