--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,8 +1,104 @@
 services:
+
+  fetchcraft-admin:
+    image: fetchcraft
+    container_name: fetchcraft-admin
+    entrypoint: ["uv", "run", "fetchcraft-admin"]
+    hostname: fetchcraft-admin
+    ports:
+      - "8010:8001"
+    volumes:
+      - ${INGESTION_ROOT:-./Documents}:/app/Documents
+    env_file:
+      - ./.env
+    environment:
+      - HOST=0.0.0.0
+      - PORT=8001
+    depends_on:
+      - qdrant
+      - mongodb
+      - fetchcraft-docling-server
+    restart: unless-stopped
+    networks: [ 'demo-net' ]
+
+
+  fetchcraft-docling-server:
+    image: fetchcraft-gpu-cu126
+    container_name: fetchcraft-parsing-docling
+    entrypoint: ["uv", "run", "fetchcraft-docling-server"]
+    hostname: docling-server
+    ports:
+      - "8020:8001"
+    volumes:
+      - ${DOCUMENTS_PATH:-./Documents}:/app/Documents
+    depends_on:
+      - qdrant
+    restart: unless-stopped
+    networks: [ 'demo-net' ]
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - driver: nvidia
+              device_ids: [ '1' ]
+              capabilities: [gpu]
+
+  fetchcraft-mcp:
+    image: fetchcraft
+    container_name: fetchcraft-mcp
+    entrypoint: ["uv", "run", "fetchcraft-mcp"]
+    hostname: fetchcraft-mcp
+    ports:
+      - "8030:8003"
+    volumes:
+      - ${DOCUMENTS_PATH:-./Documents}:/app/Documents
+    env_file:
+      - ./.env
+    environment:
+      - HOST=0.0.0.0
+      - PORT=8003
+      - QDRANT_HOST=fetchcraft-qdrant
+      - QDRANT_PORT=6333
+    depends_on:
+      - qdrant
+    restart: unless-stopped
+    networks: [ 'demo-net' ]
+
+  librechat:
+    image: librechat-new
+#    image: librechat-dev-alex2
+#    image: ghcr.io/danny-avila/librechat-dev-api:latest
+    container_name: librechat
+    ports:
+      - "8080:3080"
+    depends_on:
+      - mongodb
+#      - rag_api
+#    image: ghcr.io/danny-avila/librechat-dev:latest
+    restart: always
+    user: "${UID}:${GID}"
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
+    environment:
+      - HOST=0.0.0.0
+      - MONGO_URI=mongodb://mongodb:27017/LibreChat
+      - MEILI_HOST=http://meilisearch:7700
+      - RAG_PORT=${RAG_PORT:-8000}
+      - RAG_API_URL=http://rag_api:${RAG_PORT:-8010}
+    env_file:
+      - ./librechat.env
+    volumes:
+      - ./librechat.env:/app/.env
+      - ./librechat.yaml:/app/librechat.yaml
+      - ./images:/app/client/public/images
+      - ./uploads:/app/uploads
+      - ./logs:/app/api/logs
+    networks: [ 'demo-net' ]
+
   # Qdrant vector database
   qdrant:
     image: qdrant/qdrant
-    hostname: qdrant
+    hostname: fetchcraft-qdrant
     ports:
       - "6333:6333"
       - "6334:6334"
@@ -24,159 +120,6 @@ services:
       - mongodb-data:/data/db
     restart: always
 
-  # Fetchcraft OpenAPI Server
-  fetchcraft-openapi-server:
-#    build:
-#      context: .
-#      dockerfile: Dockerfile
-    image: fetchcraft
-    hostname: openapi-server
-    ports:
-      - "8001:8001"
-    volumes:
-      - ${DOCUMENTS_PATH:-./Documents}:/api/Documents
-    env_file:
-      - ./.env
-    environment:
-      - HOST=0.0.0.0
-      - PORT=8001
-      - QDRANT_HOST=qdrant
-      - QDRANT_PORT=6333
-    depends_on:
-      - qdrant
-    restart: unless-stopped
-    networks: [ 'demo-net' ]
-
-#  docling-serve:
-#    image: ghcr.io/docling-project/docling-serve-cu126:main
-#    container_name: docling-serve
-#    ports:
-#      - "5001:5001"
-#    environment:
-#      - DOCLING_SERVE_ENABLE_UI=true
-#      - DOCLING_SERVE_MAX_SYNC_WAIT=1200
-#      - DOCLING_SERVE_ARTIFACTS_PATH=/api/models
-#      - NVIDIA_VISIBLE_DEVICES=all
-##        NVIDIA_VISIBLE_DEVICES: "all" # https://docs.nvidia.com/datacenter/cloud-native/container-toolkit/latest/docker-specialized.html
-#    deploy:
-#      resources:
-#        reservations:
-#          devices:
-#            - driver: nvidia
-#              device_ids: [ '1' ]
-#              capabilities: [gpu]
-#    restart: always
-
-  fetchcraft-docling-server:
-#    build:
-#      context: .
-#      dockerfile: Dockerfile
-    image: fetchcraft-gpu
-    entrypoint: ["uv", "run", "fetchcraft-docling-server"]
-    hostname: docling-server
-    ports:
-      - "8020:8001"
-    environment:
-      - NVIDIA_VISIBLE_DEVICES=all
-    volumes:
-      - ${DOCUMENTS_PATH:-./Documents}:/api/Documents
-    depends_on:
-      - qdrant
-    restart: unless-stopped
-    networks: [ 'demo-net' ]
-    deploy:
-      resources:
-        reservations:
-          devices:
-            - driver: nvidia
-              device_ids: [ '1' ]
-              capabilities: [gpu]
-
-  fetchcraft-admin:
-#    build:
-#      context: .
-#      dockerfile: Dockerfile
-    image: fetchcraft
-    entrypoint: ["uv", "run", "fetchcraft-admin"]
-    hostname: fetchcraft-admin
-    ports:
-      - "8040:8001"
-    volumes:
-      - ${DOCUMENTS_PATH:-./Documents}:/api/Documents
-    env_file:
-      - ./.env
-    environment:
-      - HOST=0.0.0.0
-      - PORT=8001
-      - QDRANT_HOST=qdrant
-      - QDRANT_PORT=6333
-      - POSTGRES_URL=postgresql://postgres:password@pgvector:5432/ingestion
-      - DOCUMENTS_PATH=/api/Documents
-    depends_on:
-      - qdrant
-      - mongodb
-      - fetchcraft-docling-server
-    restart: unless-stopped
-    networks: [ 'demo-net' ]
-
-  fetchcraft-mcp-server:
-#    build:
-#      context: .
-#      dockerfile: Dockerfile
-    image: fetchcraft
-    entrypoint: ["uv", "run", "fetchcraft-demo-mcp-server"]
-    hostname: mcp-server
-    ports:
-      - "8003:8001"
-    volumes:
-      - ${DOCUMENTS_PATH:-./Documents}:/api/Documents
-    env_file:
-      - ./.env
-    environment:
-      - HOST=0.0.0.0
-      - PORT=8001
-      - QDRANT_HOST=wingman.akhbar.home
-      - QDRANT_PORT=6333
-      - OPENAI_API_KEY=sk-321
-#      - OPENAI_BASE_URL=http://wingman.akhbar.home:8000/v1
-    depends_on:
-      - qdrant
-    restart: unless-stopped
-    networks: [ 'demo-net' ]
-
-
-  librechat:
-    image: librechat-dev-alex2
-#    image: ghcr.io/danny-avila/librechat-dev-api:latest
-    container_name: librechat
-    ports:
-      - "3080:3080"
-    depends_on:
-      - mongodb
-#      - rag_api
-#    image: ghcr.io/danny-avila/librechat-dev:latest
-    restart: always
-    user: "${UID}:${GID}"
-    extra_hosts:
-      - "host.docker.internal:host-gateway"
-    environment:
-      - HOST=0.0.0.0
-      - MONGO_URI=mongodb://mongodb:27017/LibreChat
-      - MEILI_HOST=http://meilisearch:7700
-      - RAG_PORT=${RAG_PORT:-8000}
-      - RAG_API_URL=http://rag_api:${RAG_PORT:-8010}
-      - OPENAI_API_KEY=sk-321
-      - OPENAI_BASE_URL=http://wizzo.akhbar.home:8000/v1
-    env_file:
-      - ./librechat.env
-    volumes:
-      - ./librechat.yaml:/api/librechat.yaml
-      - ./librechat.env:/api/.env
-
-      - ./images:/api/client/public/images
-      - ./uploads:/api/uploads
-      - ./logs:/api/logs
-    networks: [ 'demo-net' ]
 
   meilisearch:
     container_name: chat-meilisearch
