--- a/.env.example
+++ b/.env.example
@@ -16,7 +16,7 @@ NVIDIA_VISIBLE_DEVICES=1
 # ------------------------------------------
 #   Vector Index
 # ------------------------------------------
-INDEX_ID=docs-index
+INDEX_ID=vector_index
 CHUNK_SIZE=4096
 CHILD_CHUNKS=1024,512
 CHUNK_OVERLAP=200
@@ -24,8 +24,6 @@ CHUNK_OVERLAP=200
 MONGO_URI=mongodb://mongodb:27017/fetchcraft
 POSTGRES_URL=postgresql://postgres:password@pgvector:5432/ingestion
 COLLECTION_NAME=fetchcraft_chatbot
-#POSTGRES_URL=postgresql://postgres:password@pgvector:5432/sexfiles
-#COLLECTION_NAME=fetchcraft_sexfiles
 
 
 # ------------------------------------------
