--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -65,7 +65,7 @@ services:
     networks: [ 'demo-net' ]
 
   librechat:
-    image: librechat
+    image: librechat-apps
 #    image: librechat-dev-alex2
 #    image: ghcr.io/danny-avila/librechat-dev-api:latest
     container_name: librechat
