Some improvements of the admin app - Status counters - Retries - Transformations

--- a/packages/fetchcraft-admin/pyproject.toml
+++ b/packages/fetchcraft-admin/pyproject.toml
@@ -25,6 +25,9 @@ sources = ["src"]
 [tool.hatch.build.targets.wheel]
 packages = ["src/fetchcraft/"]
 
+[tool.hatch.build.targets.wheel.force-include]
+"frontend/dist" = "fetchcraft/frontend/dist"
+
 [tool.uv]
 src-layout = true
 
