--- a/packages/fetchcraft-core/pyproject.toml
+++ b/packages/fetchcraft-core/pyproject.toml
@@ -28,6 +28,7 @@ dependencies = [
     "llama-index>=0.14.6",
     "llama-index-llms-openai>=0.6.6",
     "optimum[onnxruntime-gpu]>=2.0.0",
+    "python-magic>=0.4.27",
 ]
 
 [project.optional-dependencies]
