--- a/packages/fetchcraft-mcp-server/frontend/package.json
+++ b/packages/fetchcraft-mcp-server/frontend/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "lucide-react": "^0.344.0"
+    "lucide-react": "^0.344.0",
+    "react-markdown": "^9.0.1"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.15",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
