--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -125,8 +125,11 @@ services:
   meilisearch:
     container_name: chat-meilisearch
     image: getmeili/meilisearch:v1.12.3
+    hostname: meilisearch
     restart: always
     user: "${UID}:${GID}"
+    ports:
+      - "7700:7700"
     environment:
       - MEILI_HOST=http://meilisearch:7700
       - MEILI_NO_ANALYTICS=true
